--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,19 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:itemBackground">?attr/colorPrimary</item>
+        <item name="android:actionMenuTextColor">@color/colorText</item>
+        <item name="android:itemTextAppearance">@style/OptionMenuTextAppearance</item>
     </style>
 
     <style name="NavigationDrawerTextStyle">
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="OptionMenuTextAppearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textColor">@color/colorText</item>
+    </style>
 </resources>
